# winmanage

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
Windowsbat/: 01_右键菜单设置.bat  02_桌面设置.bat  03_任务栏设置.bat  04_资源管理器设置.bat  05_Windows更新设置.bat  06_UAC设置.bat  07_系统设置集中管理.bat  08_WIFI密码.bat  09_电源管理.bat  10_应用管理.bat  11_编辑Hosts.bat  12_网络管理.bat  13_设备管理.bat  14_Hash计算.bat  README.md  卡片.html
src/: App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  signatures.rs  system_info.rs  tools.rs
src-tauri/src/db/: migrations.sql  mod.rs
src/components/: BasicInfo.tsx  SettingsPage.tsx  ToolGrid.tsx
src/styles/: BasicInfo.css  SettingsPage.css  ToolGrid.css  global.css  schemes.css
